package com.example.reservatyvivesadmin

class Sala (
    var id: String = "",
    val nombre: String = "",
    val localizacion: String = "",
    val edificio: String = "",
    val horaApertura: Int = 0,
    val horaCierre: Int = 0,
    val imagen: String = ""


        ){
}